--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clean-webpack-plugin": "^0.1.15",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.23.1",
+    "decache": "^4.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.8.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
