--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue"
   ],
   "dependencies": {
+    "axios": "^0.16.2",
     "es6-promise": "^4.1.0",
     "koa": "^1.0.0",
     "koa-router": "^5.0.0",
